finish auth and then fix the views in articles create

--- a/templates/components/comment-widget.html
+++ b/templates/components/comment-widget.html
@@ -51,4 +51,11 @@
 
 <script>
     // js here
+    const ReplyForm = $('.comment-reply-form');
+
+    if (ReplyForm.id === 'first-reply') {
+        
+    } else {
+
+    }
 </script>
