--- a/math2code/templates/math2code/components/reply-form.html
+++ b/math2code/templates/math2code/components/reply-form.html
@@ -4,7 +4,8 @@
     /* css */
 </style>
 
-<form action="{% url %}">
+<form action=".">
     {{form.as_p}}
+    <input type="hidden" value="{{pk}}" name="comment">
     <input type="submit" value="submit" name="{{pk}}">
 </form>
