--- a/profile/templates/profile/profile.html
+++ b/profile/templates/profile/profile.html
@@ -12,6 +12,8 @@
 
 <div class="author-preview-wrapper">
     <h1>Hi, My Name Is {{user.user.first_name}}</h1>
+    <img src="{{user.profile_pic}}" alt="">
+    <p>My Signiture: {{user.signiture}}</p>
 </div>
 
 {% endblock %}
