--- a/profile/templates/profile/set_profile.html
+++ b/profile/templates/profile/set_profile.html
@@ -18,6 +18,7 @@
     <label for="{{field.id}}">{{field.name | capfirst}}: </label>
     {{field}}
     {% endfor %}
+    <input type="hidden" name='user' value="{{request.user}}">
     <input type="submit" value="Submit">
 </form>
 </div>
